syntax = "proto3";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";


option go_package = "proto";

message Reservation {
    int64 reservation_id = 1;
    int64 seat_count = 2;
    string start_time = 3;
    string reservation_name = 4;
    int64 customer_id = 5;
    string phone = 6;
    string comments = 7;
    int64 created = 8;
    int64 last_updated = 9;
}

message BookReservationRequest {
    int64 customer_id = 1;
    Reservation reservation = 2;
}

message BookReservationResponse {
    Reservation reservation = 1;
    string err = 2;
}

message DiscardReservationRequest {
    int64 reservation_id = 1;
}

message DiscardReservationResponse {
    string err = 1;
}

message EditReservationRequest {
    int64 reservation_id = 1;
    Reservation reservation = 2;
}

message EditReservationResponse {
    Reservation reservation = 1;
    string err = 2;
}

message GetReservationHistoryPerCustomerRequest {
    int64 customer_id = 1;
    uint64 limit = 2;
    uint64 offset = 3;
}

message GetReservationHistoryPerCustomerResponse {
    repeated Reservation reservations = 1;
    string err = 2;
}

service ReservationService {
    rpc BookReservation (BookReservationRequest) returns (BookReservationResponse) {
        option (google.api.http) = {
			post: "/customer/{customer_id}/reservation"
			body: "*"
		};
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "Book a new Reservation"
            description: "Book a new Reservation"
            tags: "reservation"
        };
    }
    rpc DiscardReservation (DiscardReservationRequest) returns (DiscardReservationResponse) {
        option (google.api.http) = {
			delete: "/reservation/{reservation_id}"
		};
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "Discard an existing reservation"
            description: "Discard an existing reservation"
            tags: "reservation"
        };
    }
    rpc EditReservation (EditReservationRequest) returns (EditReservationResponse) {
        option (google.api.http) = {
			put: "/reservation/{reservation_id}"
		};
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "Edit an existing reservation"
            description: "Edit an existing reservation"
            tags: "reservation"
        };
    }
    rpc GetReservationHistoryPerCustomer (GetReservationHistoryPerCustomerRequest) returns (GetReservationHistoryPerCustomerResponse) {
        option (google.api.http) = {
			get: "/customer/{customer_id}/reservations"
		};
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "List existing reservations per customer ordered by newest."
            description: "List existing reservations per customer ordered by newest."
            tags: "reservation"
        };
    }
}